--- a/index.html
+++ b/index.html
@@ -1394,7 +1394,8 @@
             <div class="contact-form-wrapper">
               <h2 class="text-center mb-4">Get in Touch</h2>
 
-              <form action="forms/contact.php" method="post" class="php-email-form">
+              <form action="https://api.web3forms.com/submit" method="POST" class="php-email-form">
+                <input type="hidden" name="access_key" value="dd02452a-5d32-4d89-af3e-b88abbdd118c">
                 <div class="row g-3">
                   <div class="col-md-6">
                     <div class="form-group">
@@ -1432,11 +1433,18 @@
                     </div>
                   </div>
 
-                  <div class="col-12">
+                  <!-- Honeypot Spam Protection -->
+                  <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+
+                  <!-- Custom Confirmation / Success Page -->
+                  <!-- <input type="hidden" name="redirect" value="https://mywebsite.com/thanks.html"> -->
+
+
+                  <!-- <div class="col-12">
                     <div class="loading">Loading</div>
                     <div class="error-message"></div>
                     <div class="sent-message">Your message has been sent. Thank you!</div>
-                  </div>
+                  </div> -->
 
                   <div class="col-12 text-center">
                     <button type="submit" class="btn btn-primary btn-submit">SEND MESSAGE</button>
@@ -1525,7 +1533,7 @@
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
