--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="col-lg-7 content-col" data-aos="fade-up">
             <div class="content">
               <div class="agency-name">
-                <h5 style="color: #e3f47f">____</h5>
+                <h5 style="color: #e3f47f"></h5>
               </div>
 
               <div class="main-heading">
