Update header styling and logo image
Refreshed color variables and header styles in main.css for improved visual consistency. Replaced the logo image with a new black version and updated index.html to use it. Adjusted button text and removed unused dropdown menu from navigation.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/abstract/fooliz-logo.png" alt="">
+        <img src="assets/img/abstract/fooliz-logo-black.png" alt="">
         <!-- <h1 class="sitename">Strategy</h1> -->
       </a>
 
@@ -51,7 +51,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i
@@ -68,13 +68,13 @@
               <li><a href="#">Dropdown 3</a></li>
               <li><a href="#">Dropdown 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="#pricing">Get Started</a>
+      <a class="btn-getstarted" href="#pricing">let's go</a>
 
     </div>
   </header>
