Update heading styles and add FiraSans fonts
Introduced new font-face definitions for FiraSansExtraCondensed Italic and LightItalic, and added corresponding font files. Refactored main heading in index.html to use new CSS classes for improved typography and responsive sizing. Adjusted color variables and responsive styles in main.css for better visual consistency.

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 
               <div class="main-heading">
                 <h1 class="title-font">
-                  <span class="font-regular">DESIGN THAT</span>
-                  <span class="font-bold">SLAPS</span><br>
-                  <span class="font-regular">APPS THAT</span>
-                  <span class="font-bold">WORK!</span>
+                  <span class="font-design-that">DESIGN THAT</span>
+                  <span class="font-slaps">SLAPS,</span><br>
+                  <span class="font-apps-that">Apps that</span>
+                  <span class="font-work">work!</span>
                 </h1>
                 <!-- <h1 class="title-font">DESIGN THAT SLAPS<br>APPS THAT WORK!</h1> -->
               </div>
