Update all button styles
Standardized button styles across CSS to use Benzin-Bold font, rounded borders, and updated color variables. Changed button and link text in index.html and main.js to lowercase for a consistent look. Removed unused FiraSansExtraCondensed-Italic.ttf font file.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
               <div class="cta-button">
                 <a href="#services" class="btn">
-                  <span>EXPLORE SERVICES</span>
+                  <span>explore</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
@@ -191,7 +191,7 @@
                 </div>
               </div>
 
-              <a href="#" class="btn btn-primary mt-4">Explore Our Services</a>
+              <a href="#" class="btn btn-primary mt-4">explore our services</a>
             </div>
           </div>
         </div>
@@ -355,7 +355,7 @@
                   No cookie-cutter stuff — just tailored tools that actually move the needle.
                 </p>
                 <a href="services.html" class="service-btn">
-                  View All Services
+                  view all services
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
@@ -590,7 +590,7 @@
             </div>
 
             <div class="cta-buttons d-flex flex-wrap gap-3">
-              <a href="#" class="btn btn-primary">Contact Now</a>
+              <a href="#" class="btn btn-primary">contact now</a>
               <!-- <a href="#" class="btn btn-outline">Learn More</a> -->
             </div>
           </div>
@@ -1074,7 +1074,7 @@
       </div>
 
       <div class="col-12 text-center">
-        <button class="show-more-button">Show More</button>
+        <button class="show-more-button">show more</button>
       </div>
 
     </section><!-- /Portfolio Section -->
@@ -1538,7 +1538,7 @@
                   </div> -->
 
                   <div class="col-12 text-center">
-                    <button type="submit" class="btn btn-primary btn-submit">SEND MESSAGE</button>
+                    <button type="submit" class="btn btn-primary btn-submit">send message</button>
                   </div>
                 </div>
               </form>
