Update branding and navigation, remove template comments
Replaced template branding with custom logo and updated navigation links in portfolio-details.html to reference index.html sections. Changed 'Get Started' button to 'let's go' and linked it to the contact section. Switched about image from .webp to .png and added the new image. Removed template comments from CSS and HTML files, and commented out testimonials section in index.html.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="#pricing">let's go</a>
+      <a class="btn-getstarted" href="#contact">let's go</a>
 
     </div>
   </header>
@@ -155,7 +155,7 @@
         <div class="row gx-5 align-items-center">
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
             <div class="about-image position-relative">
-              <img src="assets/img/about/about-portrait-1.webp" class="img-fluid rounded-4 shadow-sm" alt="About Image"
+              <img src="assets/img/about/about-portrait-1.png" class="img-fluid rounded-4 shadow-sm" alt="About Image"
                 loading="lazy">
               <div class="experience-badge">
                 <span class="years">5+</span>
@@ -169,8 +169,8 @@
               <h2>Not Your Average Tech Studio</h2>
               <p class="lead">Fooliz is a design-driven, code-loving creative lab that blends brains with boldness.
                 We’re not here to play it safe — we build things that stand out and scale.</p>
-              <p>From strategy to pixels to product launch, our crew goes all in.
-                We’re the creative partner you didn’t know you needed (but now can’t unsee).</p>
+              <!-- <p>From strategy to pixels to product launch, our crew goes all in. 
+                We’re the creative partner you didn’t know you needed (but now can’t unsee).</p>-->
 
               <div class="row g-4 mt-3">
                 <div class="col-md-6" data-aos="zoom-in" data-aos-delay="400">
@@ -619,14 +619,14 @@
 
     </section><!-- /Call To Action Section -->
 
-    <!-- Testimonials Section -->
+    <!-- Testimonials Section 
     <section id="testimonials" class="testimonials section light-background">
 
-      <!-- Section Title -->
+       Section Title 
       <div class="container section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
         <div><span>Check Our</span> <span class="description-title">Testimonials</span></div>
-      </div><!-- End Section Title -->
+      </div> End Section Title 
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -677,7 +677,7 @@
                   </div>
                 </div>
               </div>
-            </div><!-- End Testimonial Item -->
+            </div> End Testimonial Item 
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -709,7 +709,7 @@
                   </div>
                 </div>
               </div>
-            </div><!-- End Testimonial Item -->
+            </div> End Testimonial Item 
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -742,7 +742,7 @@
                   </div>
                 </div>
               </div>
-            </div><!-- End Testimonial Item -->
+            </div> End Testimonial Item 
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -774,7 +774,7 @@
                   </div>
                 </div>
               </div>
-            </div><!-- End Testimonial Item -->
+            </div> End Testimonial Item 
 
           </div>
 
@@ -787,7 +787,7 @@
 
       </div>
 
-    </section><!-- /Testimonials Section -->
+    </section> /Testimonials Section -->
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section">
