Refactor color scheme and feature item styles
Updated CSS to use new color variables for improved consistency and theming. Split .feature-item into .feature-item-green and .feature-item-beige with distinct styles. Updated index.html to use new feature item classes and commented out the experience badge.

--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
             <div class="about-image position-relative">
               <img src="assets/img/about/about-portrait-1.png" class="img-fluid rounded-4 shadow-sm" alt="About Image"
                 loading="lazy">
-              <div class="experience-badge">
+              <!-- <div class="experience-badge">
                 <span class="years">5+</span>
                 <span class="text">Years of Expertise</span>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -174,7 +174,7 @@
 
               <div class="row g-4 mt-3">
                 <div class="col-md-6" data-aos="zoom-in" data-aos-delay="400">
-                  <div class="feature-item">
+                  <div class="feature-item-green">
                     <i class="bi bi-check-circle-fill"></i>
                     <h5>Always-On Project Crew</h5>
                     <p>You don’t just get a dev — you get a full, nerdy, obsessed team.
@@ -182,7 +182,7 @@
                   </div>
                 </div>
                 <div class="col-md-6" data-aos="zoom-in" data-aos-delay="450">
-                  <div class="feature-item">
+                  <div class="feature-item-beige">
                     <i class="bi bi-lightbulb-fill"></i>
                     <h5>Future-Ready by Default</h5>
                     <p>We don’t just follow trends — we blueprint what’s next.
