Update color scheme and UI styles for consistency
Replaced various color and background CSS variables to use new default color tokens for improved consistency and maintainability. Updated styles for call-to-action, portfolio, and team sections to align with the new palette. Commented out a floating card element in index.html, likely for design simplification or pending redesign.

--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
 
           <div class="content-right position-relative" data-aos="fade-left" data-aos-delay="300">
             <img src="assets/img/misc/misc-1.webp" alt="Digital Platform" class="img-fluid rounded-4">
-            <div class="floating-card">
+            <!-- <div class="floating-card">
               <div class="card-icon">
                 <i class="bi bi-graph-up-arrow"></i>
               </div>
@@ -605,7 +605,7 @@
                 <span class="stats-number">245%</span>
                 <span class="stats-text">Growth Rate</span>
               </div>
-            </div>
+            </div> -->
           </div>
 
           <div class="decoration">
