Replace Bootstrap icons with custom PNG icons
Swapped out Bootstrap icon elements for custom PNG icons across multiple sections in index.html, including features, services, steps, portfolio filters, pricing, and contact info. Added new icon images to assets/img/icons and updated CSS to style the new icons for consistent sizing and alignment.

--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
               <div class="row g-4 mt-3">
                 <div class="col-md-6" data-aos="zoom-in" data-aos-delay="400">
                   <div class="feature-item-green">
-                    <i class="bi bi-check-circle-fill"></i>
+                    <!-- <i class="bi bi-check-circle-fill"></i> -->
+                    <img src="assets/img/icons/always-on.png" alt="Future Ready Icon" class="feature-icon">
                     <h5>Always-On Project Crew</h5>
                     <p>You don’t just get a dev — you get a full, nerdy, obsessed team.
                       We stick around, solve problems, and move like we're part of your squad.</p>
@@ -183,7 +184,8 @@
                 </div>
                 <div class="col-md-6" data-aos="zoom-in" data-aos-delay="450">
                   <div class="feature-item-beige">
-                    <i class="bi bi-lightbulb-fill"></i>
+                    <!-- <i class="bi bi-lightbulb-fill"></i> -->
+                    <img src="assets/img/icons/always-on.png" alt="Future Ready Icon" class="feature-icon">
                     <h5>Future-Ready by Default</h5>
                     <p>We don’t just follow trends — we blueprint what’s next.
                       Your brand deserves more than "meh" ideas and version 1.0 thinking.</p>
@@ -367,7 +369,8 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <i class="bi bi-palette"></i>
+                <!-- <i class="bi bi-palette"></i> -->
+                <img src="assets/img/icons/mobile-apps.png" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
               <a href="service-details.html"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
@@ -387,7 +390,8 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <i class="bi bi-gem"></i>
+                <!-- <i class="bi bi-gem"></i> -->
+                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <a href="service-details.html"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
@@ -407,7 +411,8 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <i class="bi bi-megaphone"></i>
+                <!-- <i class="bi bi-megaphone"></i> -->
+                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <a href="service-details.html"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
@@ -427,7 +432,8 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <i class="bi bi-code-slash"></i>
+                <!-- <i class="bi bi-code-slash"></i> -->
+                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <a href="service-details.html"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
@@ -447,7 +453,8 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <i class="bi bi-graph-up"></i>
+                <!-- <i class="bi bi-graph-up"></i> -->
+                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <a href="service-details.html"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
@@ -467,7 +474,8 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <i class="bi bi-camera-video"></i>
+                <!-- <i class="bi bi-camera-video"></i> -->
+                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <a href="service-details.html"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
@@ -506,7 +514,8 @@
           <div class="step-item" data-aos="fade-right" data-aos-delay="200">
             <div class="step-content">
               <div class="step-icon">
-                <i class="bi bi-lightbulb"></i>
+                <!-- <i class="bi bi-lightbulb"></i> -->
+                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <div class="step-info">
                 <span class="step-number">Step 01</span>
@@ -519,7 +528,8 @@
           <div class="step-item" data-aos="fade-left" data-aos-delay="300">
             <div class="step-content">
               <div class="step-icon">
-                <i class="bi bi-gear"></i>
+                <!-- <i class="bi bi-gear"></i> -->
+                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <div class="step-info">
                 <span class="step-number">Step 02</span>
@@ -532,7 +542,8 @@
           <div class="step-item" data-aos="fade-right" data-aos-delay="400">
             <div class="step-content">
               <div class="step-icon">
-                <i class="bi bi-bar-chart"></i>
+                <!-- <i class="bi bi-bar-chart"></i> -->
+                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <div class="step-info">
                 <span class="step-number">Step 03</span>
@@ -545,7 +556,8 @@
           <div class="step-item" data-aos="fade-left" data-aos-delay="500">
             <div class="step-content">
               <div class="step-icon">
-                <i class="bi bi-check2-circle"></i>
+                <!-- <i class="bi bi-check2-circle"></i> -->
+                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <div class="step-info">
                 <span class="step-number">Step 04</span>
@@ -576,15 +588,18 @@
 
             <div class="features d-flex flex-wrap gap-3 mb-4">
               <div class="feature-item">
-                <i class="bi bi-check-circle-fill"></i>
+                <!-- <i class="bi bi-check-circle-fill"></i> -->
+                <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
                 <span>Instant Dev Access</span>
               </div>
               <div class="feature-item">
-                <i class="bi bi-check-circle-fill"></i>
+                <!-- <i class="bi bi-check-circle-fill"></i> -->
+                <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
                 <span>Design-Led Everything</span>
               </div>
               <div class="feature-item">
-                <i class="bi bi-check-circle-fill"></i>
+                <!-- <i class="bi bi-check-circle-fill"></i> -->
+                <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
                 <span>Built to Scale</span>
               </div>
             </div>
@@ -804,19 +819,29 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="200">
             <li data-filter="*" class="filter-active">
-              <i class="bi bi-grid-3x3"></i> All Projects
+              <!-- <i class="bi bi-grid-3x3"></i>  -->
+              <img src="assets/img/icons/ui-uix-p.png" alt="Website Development Icon" class="portfolio-icon-img">
+              All Projects
             </li>
             <li data-filter=".filter-ui">
-              <i class="bi bi-phone"></i> UI/UX
+              <!-- <i class="bi bi-phone"></i>  -->
+              <img src="assets/img/icons/ui-uix-p.png" alt="Website Development Icon" class="portfolio-icon-img">
+              UI/UX
             </li>
             <li data-filter=".filter-development">
-              <i class="bi bi-code-slash"></i> Development
+              <!-- <i class="bi bi-code-slash"></i>  -->
+              <img src="assets/img/icons/ui-uix-p.png" alt="Website Development Icon" class="portfolio-icon-img">
+              Development
             </li>
             <li data-filter=".filter-photography">
-              <i class="bi bi-camera"></i> Photography
+              <!-- <i class="bi bi-camera"></i>  -->
+              <img src="assets/img/icons/ui-uix-p.png" alt="Website Development Icon" class="portfolio-icon-img">
+              Photography
             </li>
             <li data-filter=".filter-marketing">
-              <i class="bi bi-graph-up"></i> Marketing
+              <!-- <i class="bi bi-graph-up"></i>  -->
+              <img src="assets/img/icons/ui-uix-p.png" alt="Website Development Icon" class="portfolio-icon-img">
+              Marketing
             </li>
           </ul>
 
@@ -1235,7 +1260,8 @@
             <div class="pricing-card">
               <div class="plan-header">
                 <div class="plan-icon">
-                  <i class="bi bi-box"></i>
+                  <!-- <i class="bi bi-box"></i> -->
+                  <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
                 </div>
                 <h3>Starter</h3>
                 <p>For individuals just getting started</p>
@@ -1268,7 +1294,8 @@
               <div class="popular-tag">Most Popular</div>
               <div class="plan-header">
                 <div class="plan-icon">
-                  <i class="bi bi-briefcase"></i>
+                  <!-- <i class="bi bi-briefcase"></i> -->
+                  <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
                 </div>
                 <h3>Professional</h3>
                 <p>For small teams and growing businesses</p>
@@ -1300,7 +1327,8 @@
             <div class="pricing-card">
               <div class="plan-header">
                 <div class="plan-icon">
-                  <i class="bi bi-building"></i>
+                  <!-- <i class="bi bi-building"></i> -->
+                  <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
                 </div>
                 <h3>Enterprise</h3>
                 <p>For large organizations and corporations</p>
@@ -1430,7 +1458,8 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="contact-info-box">
               <div class="icon-box">
-                <i class="bi bi-geo-alt"></i>
+                <!-- <i class="bi bi-geo-alt"></i> -->
+                <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <div class="info-content">
                 <h4>Our Address</h4>
@@ -1442,7 +1471,8 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="contact-info-box">
               <div class="icon-box">
-                <i class="bi bi-envelope"></i>
+                <!-- <i class="bi bi-envelope"></i> -->
+                <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <div class="info-content">
                 <h4>Email Address</h4>
@@ -1455,7 +1485,8 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="contact-info-box">
               <div class="icon-box">
-                <i class="bi bi-headset"></i>
+                <!-- <i class="bi bi-headset"></i> -->
+                <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <div class="info-content">
                 <h4>Hours of Operation</h4>
@@ -1491,6 +1522,7 @@
                     <div class="form-group">
                       <div class="input-with-icon">
                         <i class="bi bi-person"></i>
+                         <!-- <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img"> -->
                         <input type="text" class="form-control" name="name" placeholder="First Name" required="">
                       </div>
                     </div>
